# cps-833-data-mining

./: .gitignore  pyproject.toml
t1/: main.ipynb
t1/data/: submission.csv
t2/: get_data.sh  main.ipynb
