[tool.poetry]
name = "cps-833-data-mining"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <lri2911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
plotly = "^6.0.1"
nbformat = "^5.10.4"
scikit-learn = "^1.6.1"
numpy = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
